# Dynamicpricingsystem

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py
app/agents/: __init__.py  competitor_cleaning.py  data_quality.py  explanation.py  feature_engineering_agent.py  graph.py  llm.py  room_matching.py
app/api/: __init__.py  deps.py  main.py  middleware.py
app/api/routers/: __init__.py  etl.py  explanation.py  health.py  metrics.py  prediction.py  scraping.py  training.py
app/config/: __init__.py  settings.py
app/database/: __init__.py  models.py  session.py
app/etl/: __init__.py  extract.py  flow.py  load.py  transform.py
app/feature_engineering/: __init__.py  calendars.py  defaults.py  features.py
app/inference/: __init__.py  base.py  heuristic.py  predictor.py
app/monitoring/: __init__.py  metrics.py
app/pricing/: __init__.py  engine.py  rules.py
app/schemas/: __init__.py  booking.py  common.py  competitor.py  events.py  pricing.py
app/scraping/: __init__.py  base.py  crawl4ai_scraper.py  playwright_scraper.py  targets.py  targets.yaml
app/services/: __init__.py  etl_service.py  pricing_service.py  scraping_service.py  training_service.py
app/training/: __init__.py  dataset.py  evaluate.py  train.py
app/utils/: __init__.py  exceptions.py  logging.py  retry.py
docker/: entrypoint.sh  prometheus.yml
docker/grafana/provisioning/dashboards/: dashboards.yml  pricing-overview.json
docker/grafana/provisioning/datasources/: datasource.yml
docs/: api_examples.md  architecture.md  diagrams.md
scripts/: __init__.py  generate_sample_data.py  run_etl.py  run_prediction.py  sample_data.py  train_model.py
tests/: conftest.py  test_agents.py  test_api.py  test_business_rules.py  test_etl_transform.py  test_feature_engineering.py  test_pricing_engine.py  test_schemas.py  test_scraping.py  test_training.py  test_utils.py
