[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dynamic-pricing-system"
version = "1.0.0"
description = "AI-powered dynamic hotel pricing system (XGBoost demand model + rule-aware pricing engine)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Dynamic Pricing System Contributors" }]
keywords = ["revenue-management", "dynamic-pricing", "xgboost", "fastapi", "hotel"]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Web / API
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-multipart>=0.0.9",
    # ML / data
    "xgboost>=2.0",
    "scikit-learn>=1.4",
    "optuna>=3.6",
    "mlflow>=2.12",
    "pandas>=2.2",
    "polars>=0.20",
    "numpy>=1.26",
    "pyarrow>=15.0",
    "joblib>=1.3",
    # Scraping
    "playwright>=1.43",
    "crawl4ai>=0.2",
    "beautifulsoup4>=4.12",
    # Agents / LLM
    "anthropic>=0.25",
    "langgraph>=0.0.40",
    # ETL / scheduling
    "prefect>=2.18",
    "apscheduler>=3.10",
    # Persistence
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "redis>=5.0",
    # Observability / utils
    "prometheus-client>=0.20",
    "loguru>=0.7",
    "pyyaml>=6.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "black>=24.0",
    "isort>=5.13",
    "mypy>=1.10",
    "types-pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/your-org/dynamic-pricing-system"
Documentation = "https://github.com/your-org/dynamic-pricing-system/tree/main/docs"
Issues = "https://github.com/your-org/dynamic-pricing-system/issues"

[project.scripts]
pricing-generate-data = "scripts.generate_sample_data:main"
pricing-train = "scripts.train_model:main"
pricing-predict = "scripts.run_prediction:main"
pricing-etl = "scripts.run_etl:main"

[tool.setuptools]
packages = ["app", "scripts"]

[tool.setuptools.package-data]
app = ["scraping/targets.yaml"]

# ---------------------------------------------------------------------------
# Tooling
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "scripts", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "C4", "SIM", "PERF", "RUF", "D"]
ignore = [
    "D203",  # one-blank-line-before-class (conflicts with D211)
    "D213",  # multi-line-summary-second-line (conflicts with D212)
    "D107",  # missing __init__ docstring (Google style: documented on the class)
    "B008",  # function call in argument defaults (FastAPI Depends/Header idiom)
    "UP042", # str+Enum is intentional for stable Pydantic JSON (de)serialization
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D100", "D103", "S101"]
"app/__init__.py" = ["D104"]
"**/__init__.py" = ["D104", "F401"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["app", "scripts"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = false
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
exclude = ["tests/", "build/", "dist/"]

[[tool.mypy.overrides]]
module = ["tests.*", "scripts.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["app"]
omit = ["app/scraping/playwright_scraper.py", "app/scraping/crawl4ai_scraper.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
